[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "microfvs"
version = "0.1.0"
description = "Web service for running the Forest Vegetation Simulator."
authors = [
    { name = "David Diaz", email = "ddiaz@vibranplanet.net" }
]
license = "CC-BY-NC-SA-4.0"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.135.2",
    "jinja2==3.1.6",
    "pandas==3.0.1",
    "pydantic==2.12.5",
    "sqlalchemy==2.0.48",
    "uvicorn==0.42.0",
]

[project.optional-dependencies]
dev = [
    "ipykernel==7.2.0",
    "mypy==2.1.0",
    "nbval==0.11.0",
    "pre-commit==4.6.0",
    "pytest-mock==3.15.1",
    "pytest==9.0.3",
    "requests==2.33.1",
    "ruff==0.15.13",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["microfvs*"]

[tool.setuptools.package-data]
microfvs = ["**/*.j2", "**/*.kcp"]

[tool.uv]

[tool.ruff]
required-version = ">=0.11"
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 80
indent-width = 4

[tool.ruff.lint]
select = ["A", "AIR", "ARG", "ASYNC", "BLE",  "C4", "COM", "D",  "DJ", "DTZ", "E", "EM", "EXE", "F", "FA", "FBT", "FIX", "G", "I", "ICN", "INP", "INT", "ISC", "NPY201", "PD", "PIE", "PT", "PYI", "Q", "RET", "RSE", "SIM", "SLF", "SLOT", "T10", "T20", "TD", "TID", "UP", "W", "YTT"]
ignore = ["COM812", "D100", "D104", "D105", "D107", "D203", "D213", "D215", "D400", "D401", "D404", "D406", "D407", "D408", "D409", "D413", "E501", "FBT001", "FBT002", "FIX002", "G004", "ISC001", "TD003", "ARG002", "ARG004", "FBT001",  "FBT002", "PIE796", "PT018", "PYI024", "PYI041", "SIM102", "SIM115", "SIM117", "SLF001"]

[tool.ruff.lint.isort]
known-first-party = ["microfvs"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 72

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Ignore pydocstyle and generic df names in test files.
"test_*.py" = ["D", "PD901"]
"microfvs/tests/*.py" = ["D", "PD901"]
"*.ipynb" = ["T201"]

[tool.mypy]
mypy_path = "microfvs"
files = "microfvs"
plugins = "sqlalchemy.ext.mypy.plugin"